# algorithm-advanced-guide

./: CMakeLists.txt  readme.md
phase1/: stateCompress.cpp
phase1/0x02MeiJuMoni/: kaiguan.cpp  meiju.cpp  permutationMeiju.cpp  poj1958.cpp  zuheMeiJu.cpp
phase1/0x03recursion/: poj3889.cpp
phase1/0x04binarySearch/: bs.cpp
phase1/bit/: poj1995.cpp
phase2基本数据结构/0x14哈希/: hash.cpp  poj3349.cpp
phase2基本数据结构/0x17二叉堆/: huffman.cpp
phase3搜索/0x22dfs/: poj2676.cpp
phase3搜索/0x27A/: poj1077.cpp
phase4数学知识/0x3bsummary/: tyvj1864.cpp
phase5数据结构进阶/0x46二叉查找树与平衡树/: bst.cpp  bst.h
phase7图论/0x6b总结/: poj1041.cpp
