cmake_minimum_required(VERSION 3.17)
project(algorithm_advanced_guide)

set(CMAKE_CXX_STANDARD 20)

#add_executable(algorithm_advanced_guide main.cpp)
add_executable(poj1995 phase1/bit/poj1995.cpp)
add_executable(stateCompress phase1/stateCompress.cpp)
add_executable(poj1958 phase1/0x02MeiJuMoni/poj1958.cpp)
add_executable(kaiguan phase1/0x02MeiJuMoni/kaiguan.cpp)
add_executable(bzoj1218 phase1/0x02MeiJuMoni/bzoj1218.cpp)
add_executable(poj3263 phase1/0x02MeiJuMoni/poj3263.cpp)
add_executable(permutation phase1/0x03recursion/permutation.cpp)
add_executable(poj1845 phase1/0x03recursion/poj1845.cpp)
add_executable(poj3889 phase1/0x03recursion/poj3889.cpp)
add_executable(poj2018 phase1/0x04binarySearch/poj2018.cpp)
add_executable(InnovativeBussiness phase1/0x04binarySearch/InnovativeBussiness.cpp)
add_executable(cf670c phase1/0x05Sort/cf670c.cpp)
add_executable(bzoj3032 phase1/0x05Sort/bzoj3032.cpp)
add_executable(poj3784 phase1/0x05Sort/poj3784.cpp)
add_executable(poj2289 phase1/0x05Sort/poj2289.cpp)
add_executable(poj2893 phase1/0x05Sort/poj2893.cpp)
add_executable(hihocoder1384 phase1/0x06倍增/hihocoder1384.cpp)
add_executable(poj3614 phase1/0x07greedy/poj3614.cpp)
add_executable(poj3190 phase1/0x07greedy/poj3190.cpp)
add_executable(poj1328 phase1/0x07greedy/poj1328.cpp)
add_executable(noip2012 phase1/0x07greedy/noip2012.cpp)
add_executable(poj2054 phase1/0x07greedy/poj2054.cpp)
add_executable(poj2965 phase1/0x08sum/poj2965.cpp)
add_executable(tyvj1424 phase1/0x08sum/tyvj1424.cpp)
add_executable(poj2083 phase1/0x08sum/poj2083.cpp)
add_executable(poj3714 phase1/0x08sum/poj3714.cpp)
add_executable(bzoj1271 phase1/0x08sum/bzoj1271.cpp)
add_executable(poj3179 phase1/0x08sum/poj3179.cpp)
add_executable(bzoj1045 phase1/0x08sum/bzoj1045.cpp)
add_executable(poj1723 phase1/0x08sum/poj1723.cpp)
add_executable(poj1220 phase1/0x08sum/poj1220.cpp)
add_executable(poj1050 phase1/0x08sum/poj1050.cpp)
add_executable(hdoj4864 phase1/0x08sum/hdoj4864.cpp)
add_executable(stack phase2基本数据结构/0x11栈/stack.cpp)
add_executable(hdoj4699 phase2基本数据结构/0x11栈/hdoj4699.cpp)
add_executable(eval phase2基本数据结构/0x11栈/eval.cpp)
add_executable(poj2559monostack phase2基本数据结构/0x11栈/poj2559monostack.cpp)
add_executable(poj2259 phase2基本数据结构/0x12队列/poj2259.cpp)
add_executable(bzoj2457 phase2基本数据结构/0x12队列/bzoj2457.cpp)
add_executable(tyvj1305 phase2基本数据结构/0x12队列/tyvj1305.cpp)
add_executable(poj3349 phase2基本数据结构/0x14哈希/poj3349.cpp)
add_executable(poj3974 phase2基本数据结构/0x14哈希/poj3974.cpp)
add_executable(dna phase2基本数据结构/0x14哈希/dna.cpp)
add_executable(suffix phase2基本数据结构/0x14哈希/suffix.cpp)
add_executable(kmp phase2基本数据结构/0x15字符串/kmp.cpp)
add_executable(poj1961 phase2基本数据结构/0x15字符串/poj1961.cpp)
add_executable(trie phase2基本数据结构/0x16Trie/trie.cpp)
add_executable(xorLargestPair phase2基本数据结构/0x16Trie/xorLargestPair.cpp)
add_executable(poj3764 phase2基本数据结构/0x16Trie/poj3764.cpp)
add_executable(heap phase2基本数据结构/0x17二叉堆/heap.cpp)
add_executable(poj1456 phase2基本数据结构/0x17二叉堆/poj1456.cpp)
add_executable(poj2442 phase2基本数据结构/0x17二叉堆/poj2442.cpp)
add_executable(bzoj1150 phase2基本数据结构/0x17二叉堆/bzoj1150.cpp)
add_executable(huffman phase2基本数据结构/0x17二叉堆/huffman.cpp)
add_executable(tyvj1043 phase2基本数据结构/0x18summary/tyvj1043.cpp)
add_executable(bzoj1398 phase2基本数据结构/0x18summary/bzoj1398.cpp)
add_executable(bzoj2288 phase2基本数据结构/0x18summary/bzoj2288.cpp)
add_executable(poj1442 phase2基本数据结构/0x18summary/poj1442.cpp)
add_executable(poj2185 phase2基本数据结构/0x18summary/poj2185.cpp)
add_executable(poj2823 phase2基本数据结构/0x18summary/poj2823.cpp)
add_executable(codevs4228 phase3搜索/0x22dfs/codevs4228.cpp)
add_executable(poj2676 phase3搜索/0x22dfs/poj2676.cpp)
add_executable(poj1011 phase3搜索/0x23剪支/poj1011.cpp)
add_executable(poj1190 phase3搜索/0x23剪支/poj1190.cpp)
add_executable(poj3076 phase3搜索/0x23剪支/poj3076.cpp)
add_executable(poj2248 phase3搜索/0x24迭代加深/poj2248.cpp)
add_executable(tyvj1340 phase3搜索/0x24迭代加深/tyvj1340.cpp)
add_executable(poj3322 phase3搜索/0x25bfs/poj3322.cpp)
add_executable(bzoj2252 phase3搜索/0x25bfs/bzoj2252.cpp)
add_executable(poj1475 phase3搜索/0x25bfs/poj1475.cpp)
add_executable(dianluweixiu phase3搜索/0x26广搜变形/dianluweixiu.cpp)
add_executable(poj3635 phase3搜索/0x26广搜变形/poj3635.cpp)
add_executable(hdoj3085 phase3搜索/0x26广搜变形/hdoj3085.cpp)
add_executable(poj2449 phase3搜索/0x27A/poj2449.cpp)
add_executable(poj1077 phase3搜索/0x27A/poj1077.cpp)
add_executable(poj3460 phase3搜索/0x28IDAstar/poj3460.cpp)
add_executable(poj2286 phase3搜索/0x28IDAstar/poj2286.cpp)
add_executable(poj1084 phase3搜索/0x28IDAstar/poj1084.cpp)
add_executable(bzoj1085 phase3搜索/0x29summary/bzoj1085.cpp)
add_executable(codevs1411 phase3搜索/0x29summary/codevs1411.cpp)
add_executable(noip2002 phase3搜索/0x29summary/noip2002.cpp)
add_executable(noip2009 phase3搜索/0x29summary/noip2009.cpp)
add_executable(noip2011 phase3搜索/0x29summary/noip2011.cpp)
add_executable(poj1167 phase3搜索/0x29summary/poj1167.cpp)
add_executable(poj1945 phase3搜索/0x29summary/poj1945.cpp)
add_executable(poj2044 phase3搜索/0x29summary/poj2044.cpp)
add_executable(poj3700 phase3搜索/0x29summary/poj3700.cpp)
add_executable(poj4007 phase3搜索/0x29summary/poj4007.cpp)
add_executable(tyvj1030 phase3搜索/0x29summary/tyvj1030.cpp)
add_executable(primer phase4数学知识/0x31质数/primer.cpp)
add_executable(bzoj1053 phase4数学知识/0x32约数/bzoj1053.cpp)
add_executable(bzoj1257 phase4数学知识/0x32约数/bzoj1257.cpp)
add_executable(noip2009Hankson phase4数学知识/0x32约数/noip2009Hankson.cpp)
add_executable(poj3090 phase4数学知识/0x32约数/poj3090.cpp)
add_executable(poj3696 phase4数学知识/0x33同余/poj3696.cpp)
add_executable(poj1845Sumdiv phase4数学知识/0x33同余/poj1845Sumdiv.cpp)
add_executable(noip2012tongyu phase4数学知识/0x33同余/noip2012tongyu.cpp)
add_executable(poj2891 phase4数学知识/0x33同余/poj2891.cpp)
add_executable(poj3070 phase4数学知识/0x34矩阵乘法/poj3070.cpp)
add_executable(bzoj2973 phase4数学知识/0x34矩阵乘法/bzoj2973.cpp)
add_executable(bzoj1013 phase4数学知识/0x35高斯消元与线性空间/bzoj1013.cpp)
add_executable(poj1830 phase4数学知识/0x35高斯消元与线性空间/poj1830.cpp)
add_executable(bzoj4004 phase4数学知识/0x35高斯消元与线性空间/bzoj4004.cpp)
add_executable(hdoj3949 phase4数学知识/0x35高斯消元与线性空间/hdoj3949.cpp)
add_executable(noip2011cal phase4数学知识/0x36组合计数/noip2011cal.cpp)
add_executable(ipsc2016c phase4数学知识/0x36组合计数/ipsc2016c.cpp)
add_executable(bzoj1951 phase4数学知识/0x36组合计数/bzoj1951.cpp)
add_executable(cf451e phase4数学知识/0x37容斥原理/cf451e.cpp)
add_executable(bzoj1101 phase4数学知识/0x37容斥原理/bzoj1101.cpp)
add_executable(tyvj2020 phase4数学知识/0x38概率与数学期望/tyvj2020.cpp)
add_executable(tyvj1933 phase4数学知识/0x38概率与数学期望/tyvj1933.cpp)
add_executable(tyvj2002 phase4数学知识/0x38概率与数学期望/tyvj2002.cpp)
add_executable(poj2311 phase4数学知识/0x3a博弈论sg函数/poj2311.cpp)
add_executable(poj1704 phase4数学知识/0x3bsummary/poj1704.cpp)
add_executable(bzoj2115 phase4数学知识/0x3bsummary/bzoj2115.cpp)
add_executable(bzoj2242 phase4数学知识/0x3bsummary/bzoj2242.cpp)
add_executable(bzoj3105 phase4数学知识/0x3bsummary/bzoj3105.cpp)
add_executable(bzoj4517 phase4数学知识/0x3bsummary/bzoj4517.cpp)
add_executable(bzoj4720 phase4数学知识/0x3bsummary/bzoj4720.cpp)
add_executable(hdoj5015 phase4数学知识/0x3bsummary/hdoj5015.cpp)
add_executable(poj2947 phase4数学知识/0x3bsummary/poj2947.cpp)
add_executable(poj2976 phase4数学知识/0x3bsummary/poj2976.cpp)
add_executable(poj3233 phase4数学知识/0x3bsummary/poj3233.cpp)
add_executable(poj3904 phase4数学知识/0x3bsummary/poj3904.cpp)
add_executable(poj10161 phase4数学知识/0x3bsummary/poj10161.cpp)
add_executable(tyvj1339 phase4数学知识/0x3bsummary/tyvj1339.cpp)
add_executable(tyvj1864 phase4数学知识/0x3bsummary/tyvj1864.cpp)
add_executable(tyvj2049 phase4数学知识/0x3bsummary/tyvj2049.cpp)
add_executable(poj1456Supermarket phase5数据结构进阶/0x41并查集/poj1456Supermarket.cpp)
add_executable(codeves1540 phase5数据结构进阶/0x41并查集/codeves1540.cpp)
add_executable(poj1733 phase5数据结构进阶/0x41并查集/poj1733.cpp)
add_executable(poj1182 phase5数据结构进阶/0x41并查集/poj1182.cpp)
add_executable(tyvj1432 phase5数据结构进阶/0x42树状数组/tyvj1432.cpp)
add_executable(TinyProblem phase5数据结构进阶/0x42树状数组/TinyProblem.cpp)
add_executable(poj3468 phase5数据结构进阶/0x42树状数组/poj3468.cpp)
add_executable(poj2182 phase5数据结构进阶/0x42树状数组/poj2182.cpp)
add_executable(spoj_gss3 phase5数据结构进阶/0x43线段树/spoj_gss3.cpp)
add_executable(poj3468Simple phase5数据结构进阶/0x43线段树/poj3468Simple.cpp)
add_executable(poj1151 phase5数据结构进阶/0x43线段树/poj1151.cpp)
add_executable(poj2482 phase5数据结构进阶/0x43线段树/poj2482.cpp)
add_executable(bzoj2724 phase5数据结构进阶/0x44分块/bzoj2724.cpp)
add_executable(contestHunter46a phase5数据结构进阶/0x44分块/contestHunter46a.cpp)
add_executable(poj1741 phase5数据结构进阶/0x45点分治/poj1741.cpp)
add_executable(bst phase5数据结构进阶/0x46二叉查找树与平衡树/bst.cpp)
add_executable(bzoj3224 phase5数据结构进阶/0x46二叉查找树与平衡树/bzoj3224.cpp)
add_executable(bzoj1588 phase5数据结构进阶/0x47summary/bzoj1588.cpp)
add_executable(bzoj2599 phase5数据结构进阶/0x47summary/bzoj2599.cpp)
add_executable(bzoj2821 phase5数据结构进阶/0x47summary/bzoj2821.cpp)
add_executable(codevs1069 phase5数据结构进阶/0x47summary/codevs1069.cpp)
add_executable(poj1177 phase5数据结构进阶/0x47summary/poj1177.cpp)
add_executable(poj1417 phase5数据结构进阶/0x47summary/poj1417.cpp)
add_executable(poj2828 phase5数据结构进阶/0x47summary/poj2828.cpp)
add_executable(poj2912 phase5数据结构进阶/0x47summary/poj2912.cpp)
add_executable(poj3580 phase5数据结构进阶/0x47summary/poj3580.cpp)
add_executable(poj3667 phase5数据结构进阶/0x47summary/poj3667.cpp)
add_executable(Cookies phase6动态规划/0x51线性dp/Cookies.cpp)
add_executable(codevs1169 phase6动态规划/0x51线性dp/codevs1169.cpp)
add_executable(poj2279 phase6动态规划/0x51线性dp/poj2279.cpp)
add_executable(poj3666 phase6动态规划/0x51线性dp/poj3666.cpp)
add_executable(sgu167 phase6动态规划/0x51线性dp/sgu167.cpp)
add_executable(tyvj1061 phase6动态规划/0x51线性dp/tyvj1061.cpp)
add_executable(tyvj1071 phase6动态规划/0x51线性dp/tyvj1071.cpp)
add_executable(poj1015 phase6动态规划/0x52背包/poj1015.cpp)
add_executable(poj1742 phase6动态规划/0x52背包/poj1742.cpp)
add_executable(tyvj1096 phase6动态规划/0x52背包/tyvj1096.cpp)
add_executable(tyvj1172 phase6动态规划/0x52背包/tyvj1172.cpp)
add_executable(poj1179 phase6动态规划/0x53区间dp/poj1179.cpp)
add_executable(poly phase6动态规划/0x53区间dp/poly.cpp)
add_executable(tyvj1055 phase6动态规划/0x53区间dp/tyvj1055.cpp)
add_executable(tyvj1052 phase6动态规划/0x54树形dp/tyvj1052.cpp)
add_executable(tyvj1051 phase6动态规划/0x54树形dp/tyvj1051.cpp)
add_executable(poj3585 phase6动态规划/0x54树形dp/poj3585.cpp)
add_executable(poj2228 phase6动态规划/0x55环形与后效性处理/poj2228.cpp)
add_executable(cycleRode phase6动态规划/0x55环形与后效性处理/cycleRode.cpp)
add_executable(cf24d phase6动态规划/0x55环形与后效性处理/cf24d.cpp)
add_executable(poj2411 phase6动态规划/0x56状态压缩dp/poj2411.cpp)
add_executable(poj1185 phase6动态规划/0x56状态压缩dp/poj1185.cpp)
add_executable(codevs1199 phase6动态规划/0x57倍增dp/codevs1199.cpp)
add_executable(lc466 phase6动态规划/0x57倍增dp/lc466.cpp)
add_executable(poj2376 phase6动态规划/0x58数据结构优化dp/poj2376.cpp)
add_executable(hdoj5542 phase6动态规划/0x58数据结构优化dp/hdoj5542.cpp)
add_executable(poj1821 phase6动态规划/0x59单调队列优化dp/poj1821.cpp)
add_executable(poj3017 phase6动态规划/0x59单调队列优化dp/poj3017.cpp)
add_executable(tyvj1098 phase6动态规划/0x5a斜率优化/tyvj1098.cpp)
add_executable(poj1180 phase6动态规划/0x5a斜率优化/poj1180.cpp)
add_executable(bzoj2726 phase6动态规划/0x5a斜率优化/bzoj2726.cpp)
add_executable(cf311b phase6动态规划/0x5a斜率优化/cf311b.cpp)
add_executable(bzoj1563 phase6动态规划/0x5b四边形不等式/bzoj1563.cpp)
add_executable(cf559c phase6动态规划/0x5c计数类dp/cf559c.cpp)
add_executable(poj1737 phase6动态规划/0x5c计数类dp/poj1737.cpp)
add_executable(poj1037 phase6动态规划/0x5c计数类dp/poj1037.cpp)
add_executable(poj3208 phase6动态规划/0x5d数位统计dp/poj3208.cpp)
add_executable(bzoj1799 phase6动态规划/0x5d数位统计dp/bzoj1799.cpp)
add_executable(bzoj1079 phase6动态规划/0x5esummary/bzoj1079.cpp)
add_executable(bzoj1233 phase6动态规划/0x5esummary/bzoj1233.cpp)
add_executable(bzoj1855 phase6动态规划/0x5esummary/bzoj1855.cpp)
add_executable(bzoj1911 phase6动态规划/0x5esummary/bzoj1911.cpp)
add_executable(bzoj2337 phase6动态规划/0x5esummary/bzoj2337.cpp)
add_executable(hdoj2196 phase6动态规划/0x5esummary/hdoj2196.cpp)
add_executable(hdoj2870 phase6动态规划/0x5esummary/hdoj2870.cpp)
add_executable(hdoj4261 phase6动态规划/0x5esummary/hdoj4261.cpp)
add_executable(pj3254 phase6动态规划/0x5esummary/pj3254.cpp)
add_executable(poj1038 phase6动态规划/0x5esummary/poj1038.cpp)
add_executable(poj1160 phase6动态规划/0x5esummary/poj1160.cpp)
add_executable(poj1187 phase6动态规划/0x5esummary/poj1187.cpp)
add_executable(poj1191 phase6动态规划/0x5esummary/poj1191.cpp)
add_executable(poj1390 phase6动态规划/0x5esummary/poj1390.cpp)
add_executable(poj1463 phase6动态规划/0x5esummary/poj1463.cpp)
add_executable(poj1722 phase6动态规划/0x5esummary/poj1722.cpp)
add_executable(poj1934 phase6动态规划/0x5esummary/poj1934.cpp)
add_executable(poj1952 phase6动态规划/0x5esummary/poj1952.cpp)
add_executable(poj2176 phase6动态规划/0x5esummary/poj2176.cpp)
add_executable(poj2282 phase6动态规划/0x5esummary/poj2282.cpp)
add_executable(poj2374 phase6动态规划/0x5esummary/poj2374.cpp)
add_executable(poj3252 phase6动态规划/0x5esummary/poj3252.cpp)
add_executable(poj3345 phase6动态规划/0x5esummary/poj3345.cpp)
add_executable(poj3709 phase6动态规划/0x5esummary/poj3709.cpp)
add_executable(tyvj1056 phase6动态规划/0x5esummary/tyvj1056.cpp)
add_executable(tyvj1124 phase6动态规划/0x5esummary/tyvj1124.cpp)
add_executable(tyvj1194 phase6动态规划/0x5esummary/tyvj1194.cpp)
add_executable(tyvj1402 phase6动态规划/0x5esummary/tyvj1402.cpp)